Fixed the html and css

--- a/test/index.html
+++ b/test/index.html
@@ -13,8 +13,15 @@
             <p>Resume Builder AI</p>
         </div>
         <div class="chat-area">
+            <div class="message">
+                <div class="username">Resume Bot: </div>
+                <div class="messageContent">Hello, I am here help you build your resume!What is your full name?</div>
+            </div>
             <p class="notification">Resume Bot has signed in</p>
-            <p class="message"><span class="username">You:</span> hewwo!</p>
+            <div class="message">
+                <div class="username">You: </div>
+                <div class="messageContent">Hewwo</div>
+            </div>
         </div>
         <textarea id="userInput"></textarea>
     </div>
