stop spellcheck cus its annoying

--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
                 <div class="messageContent">Hello, I am here to help you build your resume! To get started send me any message.</div>
             </div>
         </div>
-        <textarea id="userInput" placeholder="Type your message here..."></textarea>
+        <textarea id="userInput" spellcheck="false" placeholder="Type your message here..."></textarea>
     </div>
     <script src="script.js"></script>
 </body>
