--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
             <p class="notification">Bot has signed in</p>
             <div class="message">
                 <div class="username">Bot: </div>
-                <div class="messageContent">Hello, I am here to help you build your resume! To get started send me any message.</div>
+                <div class="messageContent">To get started send me any message.</div>
             </div>
         </div>
         <textarea id="userInput" spellcheck="false" placeholder="Type your message here..."></textarea>
